--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -78,11 +78,11 @@
     border-radius: 8px;
   }
   .dx-datagrid-header-panel .dx-toolbar {
-    margin-bottom: 31px;
+    margin-bottom: 20px;
   }
   .dx-datagrid {
-    margin-top: 20px;
-    padding: 10px;
+    // margin-top: 20px;
+    // padding: 10px;
     a {
       span {
         color: black;
